from sqlalchemy import (
    Column, Integer, String, Date, DateTime, Boolean, Text, DECIMAL,
    ForeignKey, ForeignKeyConstraint, LargeBinary, Enum
)
from sqlalchemy.orm import declarative_base, relationship
import enum

# ---------------------------------------------
# SQLAlchemy base declarative class
# ---------------------------------------------
Base = declarative_base()

# ---------------------------------------------
# ENUMERATIONS
# ---------------------------------------------
class TrimestreEnum(enum.Enum):
    T1 = "T1"
    T2 = "T2"
    T3 = "T3"
    T4 = "T4"


class EstadoInscripcion(enum.Enum):
    INSCRITO = "INSCRITO"
    RESERVA = "RESERVA"


class EstadoPago(enum.Enum):
    PENDIENTE = "PENDIENTE"
    PAGADO = "PAGADO"
    ANULADO = "ANULADO"

# ---------------------------------------------
# SOCIO + GDPR CONSENT
# ---------------------------------------------
class Socio(Base):
    __tablename__ = "socios"

    id = Column(Integer, primary_key=True)
    dniNie = Column(String(15), unique=True, nullable=False)
    nombre = Column(String(50), nullable=False)
    apellido1 = Column(String(50))
    apellido2 = Column(String(50))
    direccion = Column(String(255))
    telefonoFijo = Column(String(20))
    telefonoMovil = Column(String(20))
    email = Column(String(100))
    grupoDifusion = Column(String(50))
    fechaAlta = Column(Date, nullable=False)
    fechaBaja = Column(Date)
    observaciones = Column(Text)
    foto = Column(LargeBinary)

    # Relationships
    inscripciones = relationship("InscripcionSocio", back_populates="socio", cascade="all, delete-orphan")
    asistencias = relationship("AsistenciaSocio", back_populates="socio", cascade="all, delete-orphan")
    firma = relationship("FirmaLOPD", back_populates="socio", uselist=False, cascade="all, delete-orphan")


class FirmaLOPD(Base):
    """One-to-one table that stores the GDPR consent signature."""
    __tablename__ = "firma_proteccion_datos"

    socioID = Column(Integer, ForeignKey("socios.id"), primary_key=True)
    fechaFirma = Column(Date, nullable=False)
    documento = Column(LargeBinary, nullable=False)

    socio = relationship("Socio", back_populates="firma")

# ---------------------------------------------
# PERSONAL HIERARCHY (VOLUNTEER/TEACHER)
# ---------------------------------------------
class Personal(Base):
    __tablename__ = "personal"

    id = Column(Integer, primary_key=True)
    nombre = Column(String(50), nullable=False)
    apellido1 = Column(String(50))
    apellido2 = Column(String(50))
    dniNie = Column(String(15), unique=True, nullable=False)
    email = Column(String(100))
    telfMovil = Column(String(20))
    observaciones = Column(Text)
    tipo = Column(String(50))  # Needed for single-table inheritance discriminator

    __mapper_args__ = {
        "polymorphic_identity": "personal",
        "polymorphic_on": tipo,
    }


class Voluntario(Personal):
    __mapper_args__ = {
        "polymorphic_identity": "voluntario",
    }


class Profesor(Personal):
    __mapper_args__ = {
        "polymorphic_identity": "profesor",
    }

# ---------------------------------------------
# LOCATION
# ---------------------------------------------
class Lugar(Base):
    __tablename__ = "lugares"

    id = Column(Integer, primary_key=True)
    nombre = Column(String(100), nullable=False)
    direccion = Column(String(255))

    actividades = relationship("Actividad", back_populates="lugar")

# ---------------------------------------------
# ACADEMIC YEAR & TERM
# ---------------------------------------------
class CursoAcademico(Base):
    __tablename__ = "curso_academico"

    id = Column(Integer, primary_key=True)
    nombre = Column(String(100), nullable=False)
    fechaInicio = Column(Date, nullable=False)
    fechaFin = Column(Date, nullable=False)

    actividades = relationship("Actividad", back_populates="curso", cascade="all, delete-orphan")
    trimestres = relationship("Trimestre", back_populates="curso", cascade="all, delete-orphan")


class Trimestre(Base):
    __tablename__ = "trimestres"

    id = Column(Integer, primary_key=True)
    nombre = Column(Enum(TrimestreEnum), nullable=False)
    fechaInicio = Column(Date, nullable=False)
    fechaFin = Column(Date, nullable=False)

    cursoAcademicoID = Column(Integer, ForeignKey("curso_academico.id"), nullable=False)
    curso = relationship("CursoAcademico", back_populates="trimestres")

    clases = relationship("Clase", back_populates="trimestre", cascade="all, delete-orphan")

# ---------------------------------------------
# ACTIVITIES
# ---------------------------------------------
class Actividad(Base):
    __tablename__ = "actividades"

    id = Column(Integer, primary_key=True)
    nombre = Column(String(100), nullable=False)
    numMaxAlumnos = Column(Integer)
    precio_matricula = Column(DECIMAL(10, 2), default=0.0)
    descripcion = Column(Text)

    # Foreign Keys
    cursoAcademicoID = Column(Integer, ForeignKey("curso_academico.id"))
    lugarID = Column(Integer, ForeignKey("lugares.id"))
    personalID = Column(Integer, ForeignKey("personal.id"))
    
    # Relationships
    curso = relationship("CursoAcademico", back_populates="actividades")
    lugar = relationship("Lugar", back_populates="actividades")
    personal = relationship("Personal")

    clases = relationship("Clase", back_populates="actividad", cascade="all, delete-orphan")
    inscripciones = relationship("InscripcionSocio", back_populates="actividad", cascade="all, delete-orphan")

# ---------------------------------------------
# CLASS SESSIONS
# ---------------------------------------------
class Clase(Base):
    __tablename__ = "clases"

    id = Column(Integer, primary_key=True)
    fecha = Column(Date, nullable=False)
    horaInicio = Column(DateTime)
    horaFin = Column(DateTime)
    duracion = Column(Integer)

    trimestreID = Column(Integer, ForeignKey("trimestres.id"), nullable=False)
    actividadID = Column(Integer, ForeignKey("actividades.id"), nullable=False)

    trimestre = relationship("Trimestre", back_populates="clases")
    actividad = relationship("Actividad", back_populates="clases")

    asistencias = relationship("AsistenciaSocio", back_populates="clase", cascade="all, delete-orphan")

# ---------------------------------------------
# ENROLLMENT OF MEMBERS INTO ACTIVITIES
# ---------------------------------------------
class InscripcionSocio(Base):
    __tablename__ = "inscripciones"

    # Composite primary key (socioID, actividadID)
    socioID = Column(Integer, ForeignKey("socios.id"), primary_key=True)
    actividadID = Column(Integer, ForeignKey("actividades.id"), primary_key=True)

    fechaInscripcion = Column(Date, nullable=False)
    fechaBaja = Column(Date)
    estado = Column(Enum(EstadoInscripcion), nullable=False)
    observaciones = Column(Text)

    socio = relationship("Socio", back_populates="inscripciones")
    actividad = relationship("Actividad", back_populates="inscripciones")

    matriculas = relationship("Pago", back_populates="inscripcion", cascade="all, delete-orphan")

# ---------------------------------------------
# ATTENDANCE TRACKING
# ---------------------------------------------
class AsistenciaSocio(Base):
    __tablename__ = "asistencias_socio"

    # Composite primary key (socioID, claseID)
    socioID = Column(Integer, ForeignKey("socios.id"), primary_key=True)
    claseID = Column(Integer, ForeignKey("clases.id"), primary_key=True)

    presente = Column(Boolean, default=False)
    observaciones = Column(Text)

    socio = relationship("Socio", back_populates="asistencias")
    clase = relationship("Clase", back_populates="asistencias")

# ---------------------------------------------
# ENROLLMENT FEE PAYMENTS
# ---------------------------------------------
class Pago(Base):
    __tablename__ = "matricula_pagos"

    id = Column(Integer, primary_key=True)
    socioID = Column(Integer, nullable=False)
    actividadID = Column(Integer, nullable=False)
    fecha = Column(Date, nullable=False)
    importe = Column(DECIMAL(10, 2), nullable=False)
    estado = Column(Enum(EstadoPago), nullable=False)
    observaciones = Column(Text)

    # Composite foreign key to InscripcionSocio
    __table_args__ = (
        ForeignKeyConstraint(
            ["socioID", "actividadID"],
            ["inscripciones.socioID", "inscripciones.actividadID"],
            name="fk_matricula_inscripcion",
            ondelete="CASCADE",
        ),
    )

    inscripcion = relationship("InscripcionSocio", back_populates="matriculas")
