@startuml
' ------------- CORE ENTITIES -------------
class Socio {
    +id: int
    +dniNie: string
    +nombre: string
    +apellido1: string
    +apellido2: string
    +direccion: string
    +telefonoFijo: string
    +telefonoMovil: string
    +email: string
    +grupoDifusion: string
    +fechaAlta: date
    +fechaBaja: date
    +observaciones: text
    +foto: blob
}

' GDPR consent (one-to-one with Socio)
class FirmaProteccionDatos {
    +socio_id: int
    +fecha_firma: date
    +documento: blob
}

Socio "1" -- "0..1" FirmaProteccionDatos : tiene

abstract class Personal {
    +id: int
    +nombre: string
    +apellido1: string
    +apellido2: string
    +dni_nie: string
}

class Voluntario
class Profesor
Personal <|-- Voluntario
Personal <|-- Profesor

' ------------- ACADEMIC CALENDAR -------------
enum TrimestreEnum {
    T1
    T2
    T3
    T4
}

class CursoAcademico {
    +id: int
    +nombre: string
    +fecha_inicio: date
    +fecha_fin: date
}

class Trimestre {
    +id: int
    +curso_academico_id: int
    +nombre: TrimestreEnum
    +fecha_inicio: date
    +fecha_fin: date
}

CursoAcademico "1" -- "4" Trimestre

' ------------- ACTIVIDADES -------------
class Lugar {
    +id: int
    +nombre: string
    +direccion: string
}

class Actividad {
    +id: int
    +curso_academico_id: int
    +nombre: string
    +numero_maximo_alumnos: int
    +lugar_id: int
    +precio_matricula: decimal
    +observaciones: text
}

CursoAcademico "1" -- "0..*" Actividad
Lugar "1" -- "0..*" Actividad

Personal  "1" -- "0..*" Actividad

' ------------- INSCRIPCIÓN DE SOCIOS -------------
enum estadoInscripcion {
    INSCRITO
    RESERVA
}

class InscripcionSocio {
    +socio_id: int       ' PK/FK
    +actividad_id: int   ' PK/FK
    +fecha_inscripcion: date
    +fecha_baja: date
    +estado: estadoInscripcion
    +observaciones: text
}

Socio     "1" -- "0..*" InscripcionSocio
Actividad "1" -- "0..*" InscripcionSocio

' ------------- CLASES Y ASISTENCIA -------------
class Clase {
    +id: int
    +actividad_id: int
    +trimestre_id: int
    +fecha: date
    +hora_inicio: time
    +hora_fin: time
    +duracion: int
}

Actividad "1" -- "0..*" Clase
Trimestre "1" -- "0..*" Clase

class AsistenciaSocio {
    +socio_id: int   ' PK/FK
    +clase_id: int   ' PK/FK
    +presente: bool
    +observaciones: text
}

Socio "1" -- "0..*" AsistenciaSocio
Clase "1" -- "0..*" AsistenciaSocio

' ------------- PAGOS -------------
enum estadoPago {
    PENDIENTE
    PAGADO
    ANULADO
}

class MatriculaPago {
    +socio_id: int      ' PK/FK to InscripcionSocio
    +actividad_id: int  ' PK/FK to InscripcionSocio
    +fecha: date
    +importe: decimal
    +estado: estadoPago
    +observaciones: text
}

InscripcionSocio "1" -- "0..*" MatriculaPago

@enduml